--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -157,6 +157,33 @@
             </td>
           
           </tr>
+          <tr>
+            <th>24783031212</td>
+            <td>Natalia</th>
+            <td>Díaz </td>
+            <td>23121221 </td>
+            <td>ndiaz@docentes.baradero.com</td>
+            <td>
+              <div class="d-flex align-items-stretch">
+                <div class="p-2">
+                  <a class ="btn btn-warning"> 
+                    <span class="fa fa-pencil fa-fw"></span>Editar!
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a  class = "btn btn-danger">
+                    <span class="fas fa-trash-alt"></span>Eliminar!
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a class = "btn btn-secondary">
+                    <span class="fas fa-eye"></span>Ver más
+                  </a>
+                </div>
+              </div>          
+            </td>
+          
+          </tr>
       
         </tbody>
     
