--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -3,24 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clases</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-    <script src="/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href = "static/css/static-footer.css" th:href="@{/css/static-footer.css}" >
-        
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
     <!--Iconos de FontAwesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
 
-    
-     <!-- SweetAlert -->
-    
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	<script src="/funciones.js"></script>
-</head>
+    <!--Iconos de FontAwesome-->
+  </head>
 <body>
   <!--logos-->
   <div class="d-flex">
@@ -42,7 +32,7 @@
         <ul class="navbar-nav">
           
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de Clases</h3> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
@@ -65,181 +55,199 @@
   </div>
 
   
-    <!--Barra de busqueda-->
-  <div class="container">
-    <form>
-        <div class="input-group">
-          <input type="text" class= "form-control" required placeholder="Buscar datos de clase...">
-          <div class="input-group-append" id="button-addon4">
-            <input type="submit" value="Buscar" button class="btn btn-outline-secondary"/>
-            <input type="button" value="Limpiar" id="btnClear" button class="btn btn-outline-secondary"/>
-          </div>	
-        </div>	 	  	
-      </form>
-  </div>
-
+  <!--Barra de busqueda--> 	  	
+      
   <!--filtrar-->
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
           <div class="p-2">
-            <div class=form-group><input type="date" class="form-control" id="fecha"></div>
+            <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
           </div>
-          <div class="p-2"><button type="submit" class= "btn btn-secondary">Filtrar</button></div>
-          <div class="p-2"><button class="btn btn-primary btn-lg">Nueva clase</button></div>
+          <div class="p-2"><button type="submit" class= "btn btn-secondary">Clases en esta fecha</button></div>
+          <div class="p-2"><button class="btn btn-primary btn-lg">Nuevo profesor</button></div>
         </div>
     </div>
   </div>
+  
+  <div class="container mb-3 mt-3">
+    <table class="table table-striped table-bordered table-responsive dat">
+      <thead>
+        <th>Nombre</th>
+        <th>Deporte</th>
+        <th>Profesores</th>
+        <th>Alumnos</th>
+        <th>Acciones</th>
+        
+      </thead>
+      <tbody>
+        <tr>
+          <td>Futbol juvenil</td>
+          <td>Futbol</td>
+          <td>Juan Perez</td>
+          <td>32/40</td>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger">
+                  <span class="fas fa-trash-alt"></span>Eliminar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-clock"></span>Horarios
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-book"></span>Asistencia
+                </a>
+              </div>
+            </div>          
+          </td>
+          <!--
+            <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger">
+                  <span class="fas fa-trash-alt"></span>Eliminar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-clock"></span>Horarios
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-book"></span>Asistencia
+                </a>
+              </div>
+            </div>          
+          </td>
+          -->
+          
+        </tr>
+        <tr>
+          <td>Futbol adultos</td>
+          <td>Futbol</td>
+          <td>Juan Perez</td>
+          <td>32/40</td>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger">
+                  <span class="fas fa-trash-alt"></span>Eliminar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-clock"></span>Horarios
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-book"></span>Asistencia
+                </a>
+              </div>
+            </div>          
+          </td>
+        </tr>
+        <tr>
+          <td>Handball femenino</td>
+          <td>Handball</td>
+          <td>Juan Perez</td>
+          <td>15/40</td>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger">
+                  <span class="fas fa-trash-alt"></span>Eliminar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-clock"></span>Horarios
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-book"></span>Asistencia
+                </a>
+              </div>
+            </div>          
+          </td>
+          
+        </tr>
+  
+      </tbody>
+      
+    </table>
+
+  </div>
+    
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
+
+  <script>
+    $('.dat').DataTable({
+      "language": {
+        "sProcessing":     "Procesando...",
+        "sLengthMenu":     "Mostrar _MENU_ registros",
+        "sZeroRecords":    "No se encontraron resultados",
+        "sEmptyTable":     "Ningún dato disponible en esta tabla",
+        "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+        "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+        "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+        "sInfoPostFix":    "",
+        "sSearch":         "Buscar:",
+        "sUrl":            "",
+        "sInfoThousands":  ",",
+        "sLoadingRecords": "Cargando...",
+        "oPaginate": {
+        "sFirst":    "Primero",
+        "sLast":     "Último",
+        "sNext":     "Siguiente",
+        "sPrevious": "Anterior"
+    },
+    "oAria": {
+        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+    },
+    "buttons": {
+        "copy": "Copiar",
+        "colvis": "Visibilidad"
+    }
+    }
+       
+  
  
-  <!--Tabla-->
-  <div class="container-fluid">
-    <div class="container">
-      <input class="form-control" id="busqueda_clase" type="text" placeholder="Buscar datos de clases..">   
-    </div>
-    <div class="pt-3">
-      <table class = "table-responsive table-bordered table-striped text-center">
-        <thead> 
-          <tr>
-            <th class="col-sm-1">NOMBRE</th>
-            <th class="col-sm-1">DEPORTE</th>
-            <th class="col-sm-1">PROFESORES</th>
-            <th class="col-sm-1">LUGAR</th>
-            <th class="col-sm-1">ALUMNOS</th> 
-            <th class="col-sm-3">ACCIONES</th>
-          </tr>
+  } );
     
-        </thead>
-    
-        <tbody id="tabla_clases">
-          <tr>
-            <th>Futbol juveniles</th>
-            <td>Futbol</td>
-            <td>Juan Perez</td>
-            <td>Polideportivo</td>
-            <td>32/40</td>
-            <td>
-              <div class="d-flex align-items-stretch">
-                <div class="p-2">
-                  <a class ="btn btn-warning"> 
-                    <span class="fa fa-pencil fa-fw"></span>Editar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a  class = "btn btn-danger">
-                    <span class="fas fa-trash-alt"></span>Eliminar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-secondary">
-                    <span class="fas fa-clock"></span>Horarios
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-info">
-                    <span class="fas fa-book"></span>Profesores
-                  </a>
-                </div>
-              </div>          
-            </td>
-          
-          </tr>
-          <tr>
-            <th>Futbol adultos</th>
-            <td>Futbol</td>
-            <td>Juan Perez</td>
-            <td>Polideportivo</td>
-            <td>15/40</td>
-            <td>
-              <div class="d-flex align-items-stretch">
-                <div class="p-2">
-                  <a class ="btn btn-warning"> 
-                    <span class="fa fa-pencil fa-fw"></span>Editar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a  class = "btn btn-danger">
-                    <span class="fas fa-trash-alt"></span>Eliminar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-secondary">
-                    <span class="fas fa-clock"></span>Horarios
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-info">
-                    <span class="fas fa-book"></span>Profesores
-                  </a>
-                </div>
-              </div>          
-            </td>
-          
-          </tr>
-          <tr>
-            <th>Futbol senior</th>
-            <td>Futbol</td>
-            <td>Juan Perez</td>
-            <td>Polideportivo</td>
-            <td>12/40</td>
-            <td>
-              <div class="d-flex align-items-stretch">
-                <div class="p-2">
-                  <a class ="btn btn-warning"> 
-                    <span class="fa fa-pencil fa-fw"></span>Editar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a  class = "btn btn-danger">
-                    <span class="fas fa-trash-alt"></span>Eliminar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-secondary">
-                    <span class="fas fa-clock"></span>Horarios
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-info">
-                    <span class="fas fa-book"></span>Profesores
-                  </a>
-                </div>
-              </div>          
-            </td>
-          
-          </tr>
-      
-        </tbody>
-    
-      </table>
-      
-    </div>
-    <script>
-      $(document).ready(function(){
-      $("#busqueda_clase").on("keyup", function() {
-        var value = $(this).val().toLowerCase();
-        $("#tabla_clases tr").filter(function() {
-          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-          });
-        });
-      });
-    </script>
-  </div>
-   <!--footer-->
-  <footer class="footer mt-3">
-  <div class="container-fluid pt-3">
-    <div class="row">
-      <div class="col-md-12 text-right bg-dark text-center text-white">
-        <div class="text-white "></div>
-          Desarrollado por Juan Cruz Colazo, Ignacio Alacia, Valentin Kyska y Thomas Díaz- Estudiantes de la UNSAdA
-        </div>
-      </div>
-  </div>
-  </footer>
-    
-  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  
-  
+  </script>
 </body>
 </html>
-  
