--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -3,27 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-    <script src="/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href = "static/css/static-footer.css" th:href="@{/css/static-footer.css}" >
-        
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
     <!--Iconos de FontAwesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
 
-    
-     <!-- SweetAlert -->
-    
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	<script src="/funciones.js"></script>
-</head>
+    <!--Iconos de FontAwesome-->
+  </head>
 <body>
   <!--logos-->
   <div class="d-flex">
@@ -82,142 +69,159 @@
         </div>
     </div>
   </div>
- 
-  <!--Tabla-->
-  <div class="container-fluid">
-    <div class="container">
-      <input class="form-control" id="busqueda_profesor" type="text" placeholder="Buscar datos de profesor..">   
-    </div>
-    <div class="pt-3">
-      <table class = "table-responsive table-bordered table-striped text-center">
-        <thead> 
-          <tr>
-            <th class="col-sm-1">DNI</th>
-            <th class="col-sm-1">NOMBRE</th>
-            <th class="col-sm-1">APELLIDO</th>
-            <th class="col-sm-1">TELEFONO</th>
-            <th class="col-sm-1">EMAIL</th> 
-            <th class="col-sm-3">ACCIONES</th>
-          </tr>
-    
-        </thead>
-    
-        <tbody id="tabla_profesores">
-          <tr>
-            <th>2478309012 </th>
-            <td>Juan</td>
-            <td>Perez </td>
-            <td>23121221 </td>
-            <td>jperez@docentes.baradero.com</td>
-            <td>
-              <div class="d-flex align-items-stretch">
-                <div class="p-2">
-                  <a class ="btn btn-warning"> 
-                    <span class="fa fa-pencil fa-fw"></span>Editar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a  class = "btn btn-danger">
-                    <span class="fas fa-trash-alt"></span>Eliminar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-secondary">
-                    <span class="fas fa-eye"></span>Ver más
-                  </a>
-                </div>
-              </div>          
-            </td>
+  
+  <div class="container">
+    <table class="table table-striped table-bordered table-responsive tabla_profesores">
+      <thead>
+        <th>Nombre</th>
+        <th>Apellido</th>
+        <th>Telefono</th>
+        <th>Email</th>
+        <th class="col-sm-3">Acciones</th>
+        
+      </thead>
+      <tbody>
+        <tr>
+          <td>Juan</td>
+          <td>Gomez</td>
+          <td>2342221</td>
+          <td>jg@docentes.com</td>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger">
+                  <span class="fas fa-trash-alt"></span>Eliminar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-eye"></span>Más
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-user"></span>Clases
+                </a>
+              </div>
+            </div>          
+          </td>
+        </tr>
+        <tr>
+          <td>Natalia</td>
+          <td>Diaz</td>
+          <td>2342221</td>
+          <td>nd@docentes.com</td>
           
-          </tr>
-          <tr>
-            <th>24783031212</td>
-            <td>Natalia</th>
-            <td>Díaz </td>
-            <td>23121221 </td>
-            <td>ndiaz@docentes.baradero.com</td>
-            <td>
-              <div class="d-flex align-items-stretch">
-                <div class="p-2">
-                  <a class ="btn btn-warning"> 
-                    <span class="fa fa-pencil fa-fw"></span>Editar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a  class = "btn btn-danger">
-                    <span class="fas fa-trash-alt"></span>Eliminar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-secondary">
-                    <span class="fas fa-eye"></span>Ver más
-                  </a>
-                </div>
-              </div>          
-            </td>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger">
+                  <span class="fas fa-trash-alt"></span>Eliminar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-eye"></span>Más
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-user"></span>Clases
+                </a>
+              </div>
+            </div>          
+          </td>
+        </tr>
+        <tr>
+          <td>Juan</td>
+          <td>Perez</td>
+          <td>2342221</td>
+          <td>jp@docentes.com</td>
           
-          </tr>
-          <tr>
-            <th>24783031212</td>
-            <td>Natalia</th>
-            <td>Díaz </td>
-            <td>23121221 </td>
-            <td>ndiaz@docentes.baradero.com</td>
-            <td>
-              <div class="d-flex align-items-stretch">
-                <div class="p-2">
-                  <a class ="btn btn-warning"> 
-                    <span class="fa fa-pencil fa-fw"></span>Editar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a  class = "btn btn-danger">
-                    <span class="fas fa-trash-alt"></span>Eliminar!
-                  </a>
-                </div>
-                <div class="p-2">
-                  <a class = "btn btn-secondary">
-                    <span class="fas fa-eye"></span>Ver más
-                  </a>
-                </div>
-              </div>          
-            </td>
-          
-          </tr>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger">
+                  <span class="fas fa-trash-alt"></span>Eliminar!
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-eye"></span>Más
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-user"></span>Clases
+                </a>
+              </div>
+            </div>          
+          </td>
+        </tr>
+  
+      </tbody>
       
-        </tbody>
-    
-      </table>
-    </div>
+    </table>
+
   </div>
+    
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
+
   <script>
-  $(document).ready(function(){
-  $("#busqueda_profesor").on("keyup", function() {
-    var value = $(this).val().toLowerCase();
-    $("#tabla_profesores tr").filter(function() {
-      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-      });
-    });
-  });
+    $('.tabla_profesores').DataTable({
+      "language": {
+        "sProcessing":     "Procesando...",
+        "sLengthMenu":     "Mostrar _MENU_ registros",
+        "sZeroRecords":    "No se encontraron resultados",
+        "sEmptyTable":     "Ningún dato disponible en esta tabla",
+        "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+        "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+        "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+        "sInfoPostFix":    "",
+        "sSearch":         "Buscar profesor:",
+        "sUrl":            "",
+        "sInfoThousands":  ",",
+        "sLoadingRecords": "Cargando...",
+        "oPaginate": {
+        "sFirst":    "Primero",
+        "sLast":     "Último",
+        "sNext":     "Siguiente",
+        "sPrevious": "Anterior"
+    },
+    "oAria": {
+        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+    },
+    "buttons": {
+        "copy": "Copiar",
+        "colvis": "Visibilidad"
+    }
+    }
+       
+  
+ 
+  } );
+    
   </script>
-  
-  <!--footer-->
-  <footer class="footer mt-3">
-    <div class="container-fluid pt-3">
-      <div class="row">
-        <div class="col-md-12 text-right bg-dark text-center text-white">
-          <div class="text-white "></div>
-            Desarrollado por Juan Cruz Colazo, Ignacio Alacia, Valentin Kyska y Thomas Díaz- Estudiantes de la UNSAdA
-          </div>
-        </div>
-    </div>
-  </footer>
-    
-  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  
-  
-      
-    
 </body>
 </html>
