--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
     <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
     <script src="/js/bootstrap.min.js"></script>
@@ -23,6 +23,7 @@
     
 </head>
 <body>
+	
   
       <!---NavBar header-->
   <div>
@@ -57,10 +58,7 @@
               <a class="dropdown-item" href="/logout">Logout</a>
             </div>
           </li>
-        
-        
         </ul>
-
       </div>
 
       
@@ -72,78 +70,55 @@
     <p class="text">Utilizar la barra para buscar por nombre, telefono o equipo!</p> 
   </div>
   
-  <div class="container-fluid">
-    <form th:action="@{/admin/listar/}">
-        <div class="input-group">
-          <input type="text" class= "form-control" name="keyword" id="keyword" th:value="${keyword}" required placeholder="Buscar...">
-          <div class="input-group-append" id="button-addon4">
-            <input type="submit" value="Search" button class="btn btn-outline-secondary"/>
-            <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" button class="btn btn-outline-secondary"/>
-          </div>	
-        </div>	 	  	
-      </form>
-  </div>
   
   
   <div class="container pt-3">
     <a th:href="@{/admin/listar/new}" class="btn btn-primary btn-lg btn-block">Nuevo</a>
   </div>
-    
-  
-  
-  
-  <div class="container-fluid pt-3">
-    <table class = "table-responsive table-bordered table-striped text-center">
-      <thead> 
-        <tr>
-          <th class="col-sm-1">ID</th>
-          <th class="col-sm-2">NOMBRE</th>
-          <th class="col-sm-1">TELEFONO</th>
-          <th class="col-sm-2">EQUIPO</th>
-          <th class="col-sm-1">S/N</th>
-          <th class="col-sm-1">ENTRADA</th>
-          <th class="col-sm-1">SALIDA</th>
-          <th class="col-sm-1">ACCIONES</th>
-        </tr>
-
-      </thead>
-
-      <tbody>
-      	<tr  th:each = "persona:${personas}">
-          <th  th:text="${persona.id}"> </th>
-          <td  th:text="${persona.name}"> </td>
-          <td  th:text="${persona.telefono}"> </td>
-          <td  th:text="${persona.equipo}" ></td>
-          <td  th:text="${persona.serie}"> </td>
-          <td  th:text="${persona.fechaEntrada}"> </td>
-          <td  th:text="${persona.fechaSalida}"> </td>
-          
-          
-          
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2 border">
-                <a th:href="@{/admin/editar/}+${persona.id}" class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
-                </a>
-              </div>
-              
-              <div class="p-2 border">
-                <a th:onclick="eliminarpersona([[${persona.id}]])" class = "btn btn-danger">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
-                </a>
-              </div>
-            </div>          
-          </td>
+  <div class="container">
+    <table class="table table-striped table-bordered table-responsive tabla_articulos">
+      <thead>
+        <th class="th-sm">ID</th>
+        <th class="th-sm">NOMBRE</th>
+        <th class="th-sm">TELEFONO</th>
+        <th class="th-sm">EQUIPO</th>
+        <th class="th-sm">S/N</th>
+        <th class="th-sm">ENTRADA</th>
+        <th class="th-sm">SALIDA</th>
+        <th class="th-sm">ACCIONES</th>
         
-        </tr>
-    
+      </thead>
+      <tbody>
+      	  <tr  th:each = "persona:${personas}">
+	          <td  th:text="${persona.id}"> </td>
+	          <td  th:text="${persona.name}"> </td>
+	          <td  th:text="${persona.telefono}"> </td>
+	          <td  th:text="${persona.equipo}" ></td>
+	          <td  th:text="${persona.serie}"> </td>
+	          <td  th:text="${persona.fechaEntrada}"> </td>
+	          <td  th:text="${persona.fechaSalida}"> </td>
+	          
+	          <td>
+	            <div class="d-flex align-items-stretch">
+	              <div class="p-2">
+	                <a class ="btn btn-warning" th:href="@{/admin/editar/}+${persona.id}"> 
+	                  <span class="fa fa-pencil fa-fw"></span>Editar!
+	                </a>
+	              </div>
+	              <div class="p-2">
+                	<a class = "btn btn-danger" th:onclick="eliminarpersona([[${persona.id}]])" >
+	                  <span class="fas fa-trash-alt"></span>Eliminar!
+	                </a>
+	              </div>
+	            </div>          
+	          </td>
+         </tr>
+         
       </tbody>
-
+      
     </table>
 
   </div>
-  
   <footer class="footer mt-3">
     <div class="container-fluid">
       <div class="row">
@@ -154,14 +129,52 @@
         </div>
     </div>
   </footer>
-  
-    
 
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
+  <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="funciones.js"></script>
+
+  <script>
+    $('.tabla_articulos').DataTable({
+      "language": {
+        "sProcessing":     "Procesando...",
+        "sLengthMenu":     "Mostrar _MENU_ registros",
+        "sZeroRecords":    "No se encontraron resultados",
+        "sEmptyTable":     "Ningún dato disponible en esta tabla",
+        "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+        "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+        "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+        "sInfoPostFix":    "",
+        "sSearch":         "Buscar Cliente:",
+        "sUrl":            "",
+        "sInfoThousands":  ",",
+        "sLoadingRecords": "Cargando...",
+        "oPaginate": {
+        "sFirst":    "Primero",
+        "sLast":     "Último",
+        "sNext":     "Siguiente",
+        "sPrevious": "Anterior"
+    },
+    "oAria": {
+        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+    },
+    "buttons": {
+        "copy": "Copiar",
+        "colvis": "Visibilidad"
+    }
+    }
+       
+  
+ 
+  } );
     
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="funciones.js"></script>
-    
-   
-  </body>
+  </script>
+  
+</body>
 </html>
