Actualizacion de imagen de background en el index.html, modificado desde el index.css
Actualizacion de imagen de usuario al logear, modificado desde
index.html

Actualizacion de mensaje de Usuario o contraseña incorrecto al iniciar
sesion, anteriormente estaba en ingles

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,6 +1,6 @@
 
 body {
-	background: url(../img/background.jpg) no-repeat center center fixed;
+	background: url(../img/baradero-1280x720.jpg) no-repeat center center fixed;
 	background-size: cover;
 	font-family: "Poppins", sans-serif;
 	height: 100vh;
