--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
       
           <!-- Icon  -->
           <div class="fadeIn first">
-            <img src="static/img/logoUser.png" th:src="@{/img/logoUser.png}" id="icono usuario" alt="icono de usuario"/>
+            <img src="static/img/escudo.png" th:src="@{/img/escudo.png}" width="300" height="300" id="icono usuario" alt="icono de usuario"/>
           </div>
       
           <!-- Login Form -->
