--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
@@ -9,13 +10,18 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
 
-    <!--Iconos de FontAwesome-->
+    
+     <!-- SweetAlert -->
+    
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="/funciones.js"></script>
+    
   </head>
 <body>
   <!--logos-->
   <div class="d-flex">
     <div class="p-2 mr-auto">
-        <img src="static/img/logodeportes.jpg" th:src="@{/img/logodeportes.jpg}" alt="Inicio" />
+        <img src="static/img/deportes.png" th:src="@{/img/deportes.png}" alt="Inicio" width="120" height="120" />
     </div>
     <div class="p-2">
       <img src="static/img/escudo.png" width="100" height="100"  th:src="@{/img/escudo.png}" alt="deportes" />
@@ -73,12 +79,14 @@
   <div class="container mb-3 mt-3">
     <table class="table table-striped table-bordered table-responsive dat">
       <thead>
-        <th>Nombre</th>
-        <th>Deporte</th>
-        <th>Profesores</th>
-        <th>Alumnos</th>
-        <th>Acciones</th>
-        
+        <tr>
+          <th class="th-sm">Nombre</th>
+          <th class="th-sm">Deporte</th>
+          <th class="th-sm">Profesores</th>
+          <th class="th-sm">Alumnos</th>
+          <th class="th-sm">Acciones</th>
+        </tr>
+      
       </thead>
       <tbody>
         <tr>
@@ -90,12 +98,12 @@
             <div class="d-flex align-items-stretch">
               <div class="p-2">
                 <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                  <span class="fa fa-pencil fa-fw"></span>Editar
                 </a>
               </div>
               <div class="p-2">
-                <a  class = "btn btn-danger">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
+                <a  class = "btn btn-danger" onclick="eliminarclase()">
+                  <span class="fas fa-trash-alt"></span>Eliminar
                 </a>
               </div>
               <div class="p-2">
@@ -147,12 +155,12 @@
             <div class="d-flex align-items-stretch">
               <div class="p-2">
                 <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                  <span class="fa fa-pencil fa-fw"></span>Editar
                 </a>
               </div>
               <div class="p-2">
-                <a  class = "btn btn-danger">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
+                <a  class = "btn btn-danger" onclick="eliminarclase()">
+                  <span class="fas fa-trash-alt"></span>Eliminar
                 </a>
               </div>
               <div class="p-2">
@@ -177,12 +185,12 @@
             <div class="d-flex align-items-stretch">
               <div class="p-2">
                 <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                  <span class="fa fa-pencil fa-fw"></span>Editar
                 </a>
               </div>
               <div class="p-2">
-                <a  class = "btn btn-danger">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
+                <a  class = "btn btn-danger" onclick="eliminarclase()">
+                  <span class="fas fa-trash-alt" ></span>Eliminar
                 </a>
               </div>
               <div class="p-2">
@@ -205,13 +213,13 @@
     </table>
 
   </div>
-    
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+   
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
   <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
+  <script src="/funciones.js"></script>
+  
 
   <script>
     $('.dat').DataTable({
