--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -46,7 +46,7 @@
               Administrador
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/logout">Logout</a>
+              <a class="dropdown-item" href="/logout">Cerrar sesión</a>
             </div>
           </li>
         
@@ -66,7 +66,7 @@
             <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
           </div>
           <div class="p-2"><button type="submit" class= "btn btn-secondary">Consultar asistencias</button></div>
-          <div class="p-2"><button class="btn btn-primary btn-lg">Nuevo profesor</button></div>
+          <div class="p-2"><button class="btn btn-primary btn-lg">Nueva clase</button></div>
         </div>
     </div>
   </div>
