Cambios form profe
agrego matricula en form y fecha de nac

--- a/src/main/resources/templates/form_profesor.html
+++ b/src/main/resources/templates/form_profesor.html
@@ -54,6 +54,15 @@
                         <label for="email">DNI</label>
                         <input th:field="*{dniProf}" type="number" class="form-control"/>
                     </div>
+                    <div class="form-group">
+                        <label for="matricula">Matricula</label>
+                        <input th:field="*{matriculaProf}" type="number" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="fechaNacimiento">Fecha de nacimiento</label>
+                        <input th:field="*{fechaNacProf}" type="date" class="form-control"/>
+                    </div>
+                    
                     
                     
                    
