Lista con todos los datos
Cambio en controller para listar, modificaciones en botones

--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -62,10 +62,7 @@
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
-          <div class="p-2">
-            <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
-          </div>
-          <div class="p-2"><button type="submit" class= "btn btn-secondary">Consultar asistencias</button></div>
+          <div class="p-2"><a class= "btn btn-secondary" href="/admin/lista_profesores_completa"> <span class="fas fa-eye"></span>Mostrar más datos</a></div>
           <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_profesores/nuevo">Nuevo Profesor</a></div>
         </div>
     </div>
@@ -102,11 +99,7 @@
                   <span class="fas fa-trash-alt"></span>Eliminar
                 </a>
               </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Más
-                </a>
-              </div>
+         
               <div class="p-2">
                 <a class = "btn btn-info">
                   <span class="fas fa-user"></span>Clases
