Agrego reporte de profe
Herramienta de reportes openPDF, defino el controller y agrego boton
para realizar el informe

--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -62,7 +62,8 @@
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
-          <div class="p-2"><a class= "btn btn-secondary" href="/admin/lista_profesores_completa"> <span class="fas fa-eye"></span>Mostrar más datos</a></div>
+          <div class="p-2"><a class= "btn btn-info" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Generar informe</a></div>
+          <div class="p-2"><a class= "btn btn-secondary" href="/admin/lista_profesores_completa"> <span class="fas fa-eye"></span> Mostrar más datos</a></div>
           <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_profesores/nuevo">Nuevo Profesor</a></div>
         </div>
     </div>
@@ -76,7 +77,7 @@
           <th class="col-sm-1">Apellido</th>
           <th class="col-sm-1">Telefono</th>
           <th class="col-sm-1">Dni</th>
-          <th class="col-sm-3">Acciones</th>
+          <th class="col-sm-2">Acciones</th>
         </tr>
 
       </thead>
@@ -99,12 +100,7 @@
                   <span class="fas fa-trash-alt"></span>Eliminar
                 </a>
               </div>
-         
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-user"></span>Clases
-                </a>
-              </div>
+   
             </div>          
 
           </td>
