--- a/src/main/resources/templates/form_profesor.html
+++ b/src/main/resources/templates/form_profesor.html
@@ -3,20 +3,17 @@
 <head>
    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-    <script src="/js/bootstrap.min.js"></script>
-        
-    <!--Iconos de FontAwesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-    <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    
+    <!--select mult-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
      <!-- SweetAlert -->
     
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="/funciones.js"></script>
     
 </head>
@@ -28,7 +25,7 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
-                <h3>Agregar persona</h3>
+                <h3>Agregar profesor</h3>
             </div>
             
             <div class="card-body">
@@ -60,9 +57,18 @@
                     </div>
                     <div class="form-group">
                         <label for="fechaNacimiento">Fecha de nacimiento</label>
-                        <input th:field="*{fechaNacProf}" type="date" class="form-control"/>
+                        <input required th:field="*{fechaNacProf}" type="date" class="form-control"/>
                         
                     </div>
+                    <div class="form-group">
+                    	<!-- Se crea el selector con todas las clases. Al seleccionar las clases, guardamos
+                    		los datos en la relacion muchos a muchos -->
+                    	<label>Clases a cargo:</label>
+                        <select type="text" class="form-control selectpicker ml-2" multiple data-live-search="true" th:field="${profesor.clases}" >
+                            <option  th:each= "clase :${clases}" th:value="${clase.idClase}" th:text="${clase.deporte}"></option>
+                        </select>
+                        
+                    </div> -->
                       
                     
                     
