--- a/src/main/resources/templates/lista_horarios.html
+++ b/src/main/resources/templates/lista_horarios.html
@@ -62,59 +62,57 @@
     </nav>
   </div>
 
-  
+  <div class="jumbotron jumbotron-fluid pt-3">
+    <div class="container">
+      <h1 class="display-4">Horarios para la clase </h1>
+    </div>
+  </div>
   <!--Barra de busqueda--> 	  	
-      
-  <!--filtrar-->
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
           <div class="p-2">
             <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
           </div>
-          <div class="p-2"><button type="submit" class= "btn btn-secondary">Clases en esta fecha</button></div>
-          <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_clases/nuevo">Nueva clase</a></div>
+          <div class="p-2"><a class="btn btn-primary btn-lg" th:href="@{/admin/agregar_horario/}+${idclase}">Agregar Horario</a></div>
         </div>
     </div>
   </div>
+  <!--filtrar-->
   
   <div class="container">
-    <table class="table table-striped table-bordered table-responsive tabla_clases">
+    <table class="table table-striped table-bordered table-responsive tabla_horarios">
       <thead> 
         <tr>
-          <th class="col-sm-1">Nombre</th>
-          <th class="col-sm-1">Deporte</th>
-          <th class="col-sm-3">Acciones</th>
+          <th class="col-sm-1">Dia</th>
+          <th class="col-sm-1">Lugar</th>
+          <th class="col-sm-1">Horario inicio</th>
+          <th class="col-sm-1">Horario fin</th>
+          <th class="col-sm-1">Acciones</th>
         </tr>
 
       </thead>
   
       <tbody>
-        <tr  th:each = "clase:${clases}">
-          <th  th:text="${clase.nombreDep}">	</th>
-          <td  th:text="${clase.deporte}"> </td>
+        <tr  th:each = "horario:${clase}">
+            <td  th:text="${horario.dia_semana}"> </td>
+            <td  th:text="${horario.lugar}"> </td>
+            <td  th:text="${horario.hora_inicio}">	</th>
+            <td  th:text="${horario.hora_fin}"> </td>
+
           <td>
             <div class="d-flex align-items-stretch">
               <div class="p-2">
-                <a class ="btn btn-warning" th:href="@{/admin/editar_clase/}+${clase.idClase}">
+                <a class ="btn btn-warning" th:href="@{/admin/editar_horario/}+ ${horario.idHorario} + '/' +${idclase}">
                   <span class="fa fa-pencil fa-fw"></span>Editar!
                 </a>
               </div>
               <div class="p-2">
-                <a  class = "btn btn-danger"  th:onclick="eliminarclase([[${clase.idClase}]])">
+                <a  class = "btn btn-danger" th:onclick="eliminarhorario([[${horario.idHorario}]])">
                   <span class="fas fa-trash-alt"></span>Eliminar!
                 </a>
               </div>
-              <div class="p-2">
-                <a class ="btn btn-warning" th:href="@{/admin/lista_horarios/}+${clase.idClase}">
-                  <span class="fas fa-clock"></span>Horarios
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-book"></span>Asistencia
-                </a>
-              </div>
+              
             </div>   
           </td>
         </tr>   
@@ -132,7 +130,7 @@
   
 
   <script>
-    $('.tabla_clases').DataTable({
+    $('.tabla_horarios').DataTable({
       "language": {
         "sProcessing":     "Procesando...",
         "sLengthMenu":     "Mostrar _MENU_ registros",
