--- a/src/main/resources/templates/lista_profesores_clases.html
+++ b/src/main/resources/templates/lista_profesores_clases.html
@@ -104,6 +104,11 @@
                   <span class="fas fa-trash-alt"></span>Eliminar
                 </a>
               </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-book"></span>Asistencia
+                </a>
+              </div>
    
             </div>          
 
