--- a/src/main/resources/templates/form_horario.html
+++ b/src/main/resources/templates/form_horario.html
@@ -25,6 +25,39 @@
     <!--Tabla que trae datos desde base de datos--
     asdjasodijasoidjiasjdo
     -->
+
+    <!--Navbar header-->
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+      
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        
+        <ul class="navbar-nav ml-md-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Administrador
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/logout">Cerrar sesiÃ³n</a>
+            </div>
+          </li>
+        
+        </ul>
+      </div>
+    </nav>
+  </div>
+
     <div class="container">
         <div class="card">
             <div class="card-header">
@@ -46,7 +79,7 @@
                         <input th:field="*{hora_fin}" type="time" class="form-control"/>
                     </div>
                     <div class="form-group">
-                        <label for="lugar">Lugar de práctica</label>
+                        <label for="lugar">Lugar de prï¿½ctica</label>
                         <input th:field="*{lugar}" type="text" class="form-control"/>
                     </div>
 					                   
