--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -82,9 +82,9 @@
     <table class="table table-striped table-bordered table-responsive tabla_clases">
       <thead> 
         <tr>
-          <th class="col-sm-1">Nombre</th>
+          <th class="col-sm-2">Nombre</th>
           <th class="col-sm-1">Deporte</th>
-          <th class="col-sm-3">Acciones</th>
+          <th class="col-sm-1">Acciones</th>
         </tr>
 
       </thead>
@@ -97,24 +97,20 @@
             <div class="d-flex align-items-stretch">
               <div class="p-2">
                 <a class ="btn btn-warning" th:href="@{/admin/editar_clase/}+${clase.idClase}">
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
+                  <span class="fas fa-pencil-alt"></span>
                 </a>
               </div>
               <div class="p-2">
                 <a  class = "btn btn-danger"  th:onclick="eliminarclase([[${clase.idClase}]])">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
+                  <span class="fas fa-trash-alt"></span>
                 </a>
               </div>
               <div class="p-2">
-                <a class ="btn btn-warning" th:href="@{/admin/lista_horarios/}+${clase.idClase}">
-                  <span class="fas fa-clock"></span>Horarios
+                <a class ="btn btn-info" th:href="@{/admin/lista_horarios/}+${clase.idClase}">
+                  <span class="fas fa-clock"></span>
                 </a>
               </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-book"></span>Asistencia
-                </a>
-              </div>
+              
             </div>   
           </td>
         </tr>   
