--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -77,7 +77,7 @@
           <th class="col-sm-1">Apellido</th>
           <th class="col-sm-1">Telefono</th>
           <th class="col-sm-1">Dni</th>
-          <th class="col-sm-2">Acciones</th>
+          <th class="col-sm-1">Acciones</th>
         </tr>
 
       </thead>
@@ -94,16 +94,20 @@
           <td>
           	<div class="d-flex align-items-stretch">
               <div class="p-2">
-                <a class ="btn btn-warning" th:href="@{/admin/editar_profesor/}+${profesor.idProf}"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
+                <a class ="btn btn-warning" th:href="@{/admin/editar_profesor/}+${profesor.idProf}" data-toggle="tooltip" data-placement="top" title="Editar">> 
+                  <span class="fas fa-pencil-alt"></span>
                 </a>
               </div>
               <div class="p-2">
                 <a  class = "btn btn-danger"  th:onclick="eliminarprofesor([[${profesor.idProf}]])">
-                  <span class="fas fa-trash-alt"></span>Eliminar
+                  <span class="fas fa-trash-alt"></span>
                 </a>
               </div>
-   
+              <div class="p-2">
+	              <a class ="btn btn-info">
+	                  <span class="fas fa-book"></span>
+	              </a>
+   			  </div>
             </div>          
 
           </td>
