--- a/src/main/resources/templates/form_horario.html
+++ b/src/main/resources/templates/form_horario.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agregar Horario</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
     <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
