--- a/src/main/resources/templates/form_profesor.html
+++ b/src/main/resources/templates/form_profesor.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agregar profesor</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
@@ -14,7 +14,8 @@
 
      <!-- SweetAlert -->
     
-	<script src="/funciones.js"></script>
+  <script src="/funciones.js"></script>
+
     
 </head>
 <body>
@@ -30,12 +31,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-      
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
-          </li>
+          
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/admin/lista_profesores"> <h3>Administracion de profesores</h3> <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/lista_clases"><h5>Administrar Clases</h5></a>
           </li>
         </ul>
         
@@ -97,7 +98,7 @@
                     		los datos en la relacion muchos a muchos -->
                     	<label>Clases a cargo:</label>
                         <select type="text" class="form-control selectpicker ml-2" multiple data-live-search="true" th:field="${profesor.clases}" >
-                            <option  th:each= "clase :${clases}" th:value="${clase.idClase}" th:text="${clase.deporte}"></option>
+                            <option  th:each= "clase :${clases}" th:value="${clase.idClase}" th:text="${clase.nombreDep}"></option>
                         </select>
                         
                     </div> -->
