--- a/src/main/resources/templates/lista_profesores_clases.html
+++ b/src/main/resources/templates/lista_profesores_clases.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Profesores</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
     <!--Iconos de FontAwesome-->
@@ -10,7 +12,8 @@
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
-
+    <script src="/showSelector.js"></script>
+    
   </head>
 <body>
   <!--logos-->
@@ -33,7 +36,7 @@
         <ul class="navbar-nav">
           
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de profesores</h3> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/admin/lista_profesores"> <h3>Administracion de profesores</h3> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin/lista_clases"><h5>Administrar Clases</h5></a>
@@ -59,59 +62,57 @@
   <!--Barra de busqueda--> 	  	
       
   <!--filtrar-->
+  
+  <div class="container">
+    <div class="container-fluid">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h3 class="display-4" th:text= " 'Clases a cargo de ' + ${profesor.nombreProf} + ' ' + ${profesor.apellidoProf}"></h3>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
           <div class="p-2"><a class= "btn btn-info" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Generar informe</a></div>
-          <div class="p-2"><a class= "btn btn-secondary" href="/admin/lista_profesores_completa"> <span class="fas fa-eye"></span> Mostrar más datos</a></div>
-          <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_profesores/nuevo">Nuevo Profesor</a></div>
-        </div>
     </div>
   </div>
-  
+
   <div class="container">
     <table class="table table-striped table-bordered table-responsive tabla_profesores">
       <thead> 
         <tr>
-          <th class="col-sm-1">Nombre</th>
-          <th class="col-sm-1">Apellido</th>
-          <th class="col-sm-1">Telefono</th>
-          <th class="col-sm-1">Dni</th>
+          <th class="col-sm-2">Clase</th> 
+          <th class="col-sm-2">Deporte</th> 
           <th class="col-sm-2">Acciones</th>
-          <th class="col-sm-2">Clases</th>
-
         </tr>
 
       </thead>
   
       <tbody>
-        <tr  th:each = "profesor:${profesores}">
-          <th  th:text="${profesor.nombreProf}">	</th>
-          <td  th:text="${profesor.apellidoProf}"> </td>
-          <td  th:text="${profesor.telefonoProf}"> </td>
-          <td  th:text="${profesor.dniProf}"></td>
-          <td  th:text="${profesor.clases[]}"></td>
-
+        <tr th:each="clase :${clases}">
+          <td  th:text="${clase.nombreDep}">	</th>
+          <td  th:text="${clase.deporte}">	</td>
           <td>
-          	<div class="d-flex align-items-stretch">
+            <div class="d-flex align-items-stretch">
               <div class="p-2">
-                <a class ="btn btn-warning" th:href="@{/admin/editar_profesor/}+${profesor.idProf}"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
+                <a class ="btn btn-warning" th:href="@{/admin/editar_clase/}+${clase.idClase}" data-toggle="tooltip" data-placement="top" title="Editar">
+                  <span class="fas fa-pencil-alt"></span>
                 </a>
               </div>
               <div class="p-2">
-                <a  class = "btn btn-danger"  th:onclick="eliminarprofesor([[${profesor.idProf}]])">
-                  <span class="fas fa-trash-alt"></span>Eliminar
+                <a  class = "btn btn-danger"  th:onclick="eliminarclase([[${clase.idClase}]])" data-toggle="tooltip" data-placement="top" title="Eliminar">
+                  <span class="fas fa-trash-alt"></span>
                 </a>
               </div>
               <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-book"></span>Asistencia
+                <a class ="btn btn-info" th:href="@{/admin/lista_horarios/}+${clase.idClase}" data-toggle="tooltip" data-placement="top" title="Horarios">
+                  <span class="fas fa-clock"></span>
                 </a>
               </div>
-   
-            </div>          
-
+              
+            </div>   
           </td>
         </tr>   
       </tbody>
@@ -125,6 +126,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
    <script>
     $('.tabla_profesores').DataTable({
       "language": {
